k8s-deployment/o-neko-mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: o-neko-mongodb
  name: o-neko-mongodb
spec:
  ports:
  - port: 27017
    targetPort: 27017
  clusterIP: None
  selector:
    o-neko: mongodb
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    o-neko: mongodb
  name: o-neko-mongodb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        o-neko: mongodb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: o-neko-mongodb
          image: mongo:3
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-volume
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: o-neko-mongodb-pvc
