k8s-deployment/o-neko-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: o-neko
  name: o-neko
spec:
  selector:
    o-neko: o-neko
  ports:
  - port: 8080
    targetPort: 8080
